--- a/app/src/main/res/drawable/nutrient_background.xml
+++ b/app/src/main/res/drawable/nutrient_background.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <!-- Color de fondo -->
+    <solid android:color="#FFFFFF" />
+
+    <!-- Bordes redondeados -->
+    <corners android:radius="5dp" />
+
+    <!-- Borde opcional -->
+    <!--
+    <stroke
+        android:width="2dp"
+        android:color="#FFA726" />
+    -->
+</shape>
